syntax = "proto3";
package ttycb;

message WriteRequest {
  bytes data = 1;
  uint64 client_id = 2;
  bytes write_uuid = 3;  // UUID to track write operations and detect duplicates
  string hostname = 4;   // Client hostname for debugging
  int64 timestamp = 5;   // Unix timestamp (seconds since epoch) for debugging
}

message ReadRequest {}

message SubscribeRequest {
  uint64 client_id = 1;
}

message WriteResponse {
  bool ok = 1;
  string message = 2;
  uint64 message_id = 3;
  bytes write_uuid = 4;  // Echo back the UUID for confirmation
}

message DataFrame {
  bytes data = 1;
  uint64 message_id = 2;
  bytes write_uuid = 3;  // UUID of the write that created this data
  string hostname = 4;   // Hostname of client that wrote this data
  int64 timestamp = 5;   // Timestamp when data was written
}

message Error {
  int32 code = 1;
  string message = 2;
}

message Envelope {
  oneof body {
    WriteRequest write = 1;
    ReadRequest read = 2;
    SubscribeRequest subscribe = 3;
    WriteResponse write_resp = 4;
    DataFrame data = 5;
    Error error = 6;
  }
}
